Fixed offscreen Toolbar

--- a/src/toolbar/Toolbar.scss
+++ b/src/toolbar/Toolbar.scss
@@ -6,7 +6,7 @@
 
   background: var(--cardBackground);
 
-  width: 100%;
+  width: 1430px;
 
   padding: $padding $padding $padding $spacing-padding;
   display: flex;
